change logo img to text

--- a/app/assets/stylesheets/style.default.css.erb
+++ b/app/assets/stylesheets/style.default.css.erb
@@ -107,7 +107,9 @@ h1,h2,h3,h4,h5 { font-weight: normal; line-height: normal; }
 
 .header { background: #0866c6; clear: both; height: 60px; }
 .headerinner { margin-left: 200px; }
-.header .logo { width: 200px; text-align: center; padding-top: 10px; padding-bottom: 10px; float: left; border-right: 1px solid rgba(255,255,255,0.15);}
+.header .logo { width: 200px; text-align: center; padding: 10px 0; height: 40px; float: left; border-right: 1px solid rgba(255,255,255,0.15);}
+.header .logo a {font-size: 38px; color: #FFF; margin: 10px; display: inline-block;}
+.header .logo a:hover {text-decoration: none;}
 .header .logo img {margin: 5px 0;width: 120px;}
 .header .logo img:hover {opacity: 1;}
 
