--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,6 +1,9 @@
 <div class="header navbar-fixed-top">
   <div class="logo">
-    <%= link_to image_tag('logo.png'), current_user.admin? ? admin_dashboard_path : dashboard_user_path(current_user) %>
+    <!--<%= link_to image_tag('logo.png'), current_user.admin? ? admin_dashboard_path : dashboard_user_path(current_user) %>-->
+    <a href="<%= current_user.admin? ? admin_dashboard_path : dashboard_user_path(current_user)%>">
+      <span>Evolve</span>
+    </a>
   </div>
   <div class="headerinner">
     <ul class="headmenu">
