--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -11,7 +11,7 @@
         onclick="$('.rightpanel,.header .logo').toggleClass('open');console.log($('.rightpanel,.head .logo').html());">
         <span class="iconfa-reorder"></span>
       </a></li>
-      <% unless current_user.admin? %>
+      <% if false %>
       <li class="odd <%= 'open' if @menu_category == 'header' and @menu_active == 'course' %>">
         <a href="<%= current_user.admin? ?  admin_manage_course_path : courses_path %>">
           <span class="head-icon iconfa-tasks"></span>
