--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -109,20 +109,8 @@ ul.activity-list {
   }
 }
 
-ul.user-todo-list {
-  list-style-type: none;
-  padding: 0;
-  margin: 0;
-
-  li {
-    padding: 10px 15px;
-    border-bottom: 1px dashed #ddd;
-    &:last-child { border-bottom: 0; }
-    span.todo-action { float: right }
-    .btn-small {
-      padding: 0 4px;
-    }
-  }
+table.todo-table {
+  margin-bottom: 0px;
 }
 
 ul.notificaiton-list {
