--- a/app/views/examinations/new.html.erb
+++ b/app/views/examinations/new.html.erb
@@ -17,31 +17,7 @@
     <h4 class="widgettitle">创建新考试</h4>
     <div class="widgetcontent">
       <div class="divider15"></div>
-      <%= simple_form_for(@exam, :html => {:class => 'form-horizontal', :multipart => true}) do |f| %>
-        <%= f.input :title, :label => "考试标题:", :input_html => { :class => "span5" } %>
-        <%= f.input :published_at, :label => "考试日期:", :as => :date,
-        :start_year => Date.today.year,
-        :end_year => Date.today.year + 10,
-        :order => [:year, :month, :day]
-        %>
-        <%= f.input :deadline, :label => "截止日期:", :as => :date,
-        :start_year => Date.today.year,
-        :end_year => Date.today.year + 10,
-        :order => [:year, :month, :day]
-        %>
-        <% if @course_class %>
-        <%= f.association :users, :collection => @course_class.students, :label => "参考人员:" %>
-        <% else %>
-        <%= f.association :users, :collection => User.staff, :label => "参考人员:" %>
-        <% end %>
-        <% if @course_class %>
-        <%= f.hidden_field :course_class_id, :value => @course_class.id %>
-        <% end %>
-        <%= f.hidden_field :creator_id, :value => current_user.id %>
-        <div class="form-actions">
-        <%= f.button :submit, '创建考试', :class => "btn-primary"  %>
-        </div>
-      <% end %>
+      <%= render :partial => 'form' %>
     </div>
   </div>
   <div id="dashboard-right" class="span4">
