--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -98,7 +98,7 @@
             </a><li>
             <% end %>
           <% else %>
-          <li class='nav-header'>没有未读消息</li>
+          <li class='nav-header'>无未读消息</li>
           <% end %>
           
           <!-- <li><a href="#"><i class="iconfa-music"></i> &nbsp;Music</a></li>
@@ -109,9 +109,12 @@
         </ul>
       </li>
       <li class="right">
-      	<a href="#" class="button">
-      	  <i class="iconfa-rss"></i><span class="badge badge-info">20</span>
+      	<a href="#" class="dropdown-toggle button" data-toggle="dropdown">
+      	  <i class="iconfa-rss"></i><!-- <span class="badge badge-info">20</span> -->
       	</a>
+        <ul class="dropdown-menu">
+          <li class='nav-header'>无未读系统通知</li>
+        </ul>
       </li>
       <li class="right">
       	<a href="#" class="button">
