--- a/app/views/admin/admin/dashboard.html.erb
+++ b/app/views/admin/admin/dashboard.html.erb
@@ -336,7 +336,8 @@ $(function() {
       </span>
     </div>
     <div class="row-fluid">
-      <span class="span4 btn btn-primary">
+      <span class="span4 btn btn-primary" modal-label="创建新考试" modal-type="examination"
+          data-target="#quick_form" data-toggle="modal" href="/ajax/form/examinations/new">
         <i class="iconfa-pencil"></i>&nbsp;创建考试
       </span>
       <span class="span4 btn btn-primary">
