--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -2,7 +2,7 @@
   <div class="logo">
     <!--<%= link_to image_tag('logo.png'), current_user.admin? ? admin_dashboard_path : dashboard_user_path(current_user) %>-->
     <a href="<%= current_user.admin? ? admin_dashboard_path : dashboard_user_path(current_user)%>">
-      <span>Evolve</span>
+      <span>Logo</span>
     </a>
   </div>
   <div class="headerinner">
@@ -61,6 +61,7 @@
 <!--          </div> -->
 <!--        </div> -->
         <div class="userloggedinfo btn-group">
+            <input type="hidden" value="<%= current_user.id %>" />
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
             <%= image_tag user_avatar_path(current_user, :normal) %>
             <!--<i class="iconfa-th"></i> &nbsp; <%= current_user.name %><small> - <%= current_user.email %></small--><span class="caret"></span></a>
