--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -92,8 +92,8 @@
           <% if current_user.notifications.active.count > 0 %>
             <li class='nav-header'>未读消息</li>
             <% current_user.notifications.active.each do |n|  %>
-            <li><a herf="<%= notice_url(n) %>">
-              <%= notice_description(n) %>
+            <li><a herf="<%= n._url %>">
+              <%= n._description(n) %>
               <small class='muted'> - <%= distance_of_time_in_words_to_now(n.created_at) + t("course.all.ago")%></small>
             </a><li>
             <% end %>
