change event day style

--- a/app/assets/stylesheets/style.default.css.erb
+++ b/app/assets/stylesheets/style.default.css.erb
@@ -360,7 +360,7 @@ right: -10px;
 .userlist-favorites li .link a:hover { text-decoration: none; color: #fff; }
 
 /** calendar **/
-.has-info-event .ui-state-default{background:#fdc;font-weight:bold;color:red;font-size:14px;}
+.has-info-event .ui-state-default{font-weight:bold; color:#0866c6;}
 .has-info-event .ui-state-default:hover,
 .has-info-event .ui-state-default:active{ background:#fed; }
 .ui-datepicker-inline .ui-datepicker-header {
