--- a/app/views/admin/admin/user.html.erb
+++ b/app/views/admin/admin/user.html.erb
@@ -61,7 +61,10 @@
     <div class="divider15"></div>
 
     <div class="well">
-      <a href="<%= new_user_path %>" class="btn btn-primary"><i class="iconfa-plus icon-white"></i><%= t('users.all.create')%></a>
+
+      <a class="btn btn-primary" title="<%= t('users.all.create')%>" modal-type="user" data-toggle="modal" 
+        data-target="#quick_form" href="/ajax/form/users/new">
+        <i class="iconfa-plus icon-white"></i><%= t('users.all.create')%></a>
       <a href="#myModal" data-toggle="modal" class="btn btn-warning"><i class="iconfa-download-alt icon-white"></i> <%= t('users.all.export') %></a>
     </div>
 
@@ -86,3 +89,5 @@
   </div>
   
 </div> <!--row-fluid-->
+<div id="quick_form">  
+</div>
