Modified to new course and plans  for the popup window

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,3 +1,5 @@
+<div id="quick_form">  
+</div>
 <div class="footer">
   <div class="footer-left">
     <span>&copy; 2010 Link Resources International Consulting Group. All rights reserved</span>
