--- a/app/views/admin/admin/course.html.erb
+++ b/app/views/admin/admin/course.html.erb
@@ -60,7 +60,10 @@
     <div class="divider15"></div>
 
     <div class="well">
-      <a href="<%= new_user_course_path(current_user) %>" class="btn btn-primary"><i class="iconfa-plus icon-white"></i> <%= t("course.all.new") %></a>
+      <a title="<%= t("course.all.new") %>" modal-type="course" prefix="/users/<%=current_user.id %>"
+        data-target="#quick_form" data-toggle="modal" href="/ajax/form/courses/new" class="btn btn-primary">
+        <i class="iconfa-plus icon-white"></i> <%= t("course.all.new") %>
+      </a>
       <a href="#myModal" data-toggle="modal" class="btn btn-warning"><i class="iconfa-download-alt icon-white"></i> <%= t("course.all.export") %></a>
     </div>
 
