Fix user's dashboard issue. Remove some useless html.

--- a/app/views/admin/admin/dashboard.html.erb
+++ b/app/views/admin/admin/dashboard.html.erb
@@ -319,6 +319,8 @@ $(function() {
     </div>
     <% end %>
 
+    <div class="divider15"></div>
+
   </div> <!--span8-->
 
   <div id="dashboard-right" class="span4">
