Change all form to user date picker for date.

--- a/app/views/training_plans/_form.html.erb
+++ b/app/views/training_plans/_form.html.erb
@@ -1,10 +1,6 @@
 <%= simple_form_for(@training_plan, :html => {:class => 'form-horizontal', :multipart => true }) do |f| %>
   <%= f.input :title, :label => '培训计划标题' %>
-  <%= f.input :feedback_deadline, :label => '学员反馈截止日期', :as => :date, 
-    :start_year => Date.today.year, 
-    :end_year => Date.today.year + 10, 
-    :order => [:year, :month, :day]
-  %>
+  <%= f.input :feedback_deadline, :label => '学员反馈截止日期', :as => :date_picker %>
   <%= f.association :required_courses, :label => '必修课程', :multiple => true %>
   <%= f.association :optional_courses, :label => '选修课程', :multiple => true %>
   <%= f.association :users, :label => '计划参培人员', :collection => User.staff, :multiple => true %>
