--- a/app/views/examinations/_form.html.erb
+++ b/app/views/examinations/_form.html.erb
@@ -1,15 +1,7 @@
 <%= simple_form_for(@examination, :html => {:class => 'form-horizontal', :multipart => true}) do |f| %>
   <%= f.input :title, :label => "考试标题:" %>
-  <%= f.input :published_at, :label => "考试日期:", :as => :date,
-  :start_year => Date.today.year,
-  :end_year => Date.today.year + 10,
-  :order => [:year, :month, :day]
-  %>
-  <%= f.input :deadline, :label => "截止日期:", :as => :date,
-  :start_year => Date.today.year,
-  :end_year => Date.today.year + 10,
-  :order => [:year, :month, :day]
-  %>
+  <%= f.input :published_at, :label => "考试日期:", :as => :date_picker %>
+  <%= f.input :deadline, :label => "截止日期:", :as => :date_picker %>
   <% if @course_class %>
   <%= f.association :users, :collection => @course_class.students, :label => "参考人员:" %>
   <% else %>
