--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -12,7 +12,7 @@
   <%# f.input :joined_at, :label => '入职时间：', as: :date, start_year: Date.today.year - 90,
                         end_year: Date.today.year - 12,
                         order: [:year, :month, :day] %>
-  <%= f.input :joined_at, :as => :date_picker, :lable => '入职时间：' %>
+  <%= f.input :joined_at, :lable => '入职时间：', :as => :date_picker %>
   <%= f.input :birthday, :label => '出身年月：', :as => :date_picker %>
   <div class="control-group file optional">
     <label class="file optional control-label" for="user_avatar">上传头像：</label>
