change ajax form date to datepicker

--- a/app/assets/stylesheets/style.default.css.erb
+++ b/app/assets/stylesheets/style.default.css.erb
@@ -363,6 +363,9 @@ right: -10px;
 .has-info-event .ui-state-default{font-weight:bold; color:#0866c6;}
 .has-info-event .ui-state-default:hover,
 .has-info-event .ui-state-default:active{ background:#fed; }
+.ui-datepicker {
+	z-index: 1051 !important;
+}
 .ui-datepicker-inline .ui-datepicker-header {
 	background-color: #0866c6;
 }
